@@ -50,8 +50,8 @@
   00d41b72d8329a00a7018b7bf936dafda3618ef1 2013100400 mingw32-mingw-get.xml
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   6f1bec812a6376338cdb16f11929eb5e866a3fba 2017071600 mingw32-mpc.xml
-  671658adeceafd003aa2d1fd7a6c0177d01316e3 2018011700 mingw32-mpfr.xml
-  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2018122802 mingw32-package-list.xml
+  1b5e1e0c486dad8396884033777e13357365ad76 2018122800 mingw32-mpfr.xml
+  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2018122803 mingw32-package-list.xml
   1f15439ee5f66ec22321c7aa853559b6f8f7172f 2015090800 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   6032af6ff68aa4821cf51938781fd9e75f05de5f 2016082200 mingw32-pthreads-w32.xml
