@@ -4,7 +4,7 @@
   <!-- File: mingw32-mpfr.xml ~~ mingw-get package description for mpfr -->
 
   <package-collection subsystem="mingw32">
-    <download-host uri="http://prdownloads.sourceforge.net/mingw/%F?download" />
+    <download-host uri="http://osdn.net/dl/mingw/%F" />
 
     <!-- Provides the package descriptions for the mpfr library, which -->
     <!-- is a runtime prerequisite for modern versions of GCC.        -->
@@ -32,38 +32,21 @@
       <licence tarname="mpfr-%-mingw32-lic.tar.lzma" />
 
       <component class="dev">
-        <release tarname="mpfr-3.1.5-2-mingw32-dev.tar.xz">
-          <requires eq="mingw32-libmpfr-%-mingw32-dll-4.tar" />
-        </release>
-        <release tarname="mpfr-3.1.5-1-mingw32-dev.tar.xz">
-          <requires eq="mingw32-libmpfr-%-mingw32-dll-4.tar" />
-        </release>
-        <release tarname="mpfr-3.1.2-2-mingw32-dev.tar.lzma">
-          <requires eq="mingw32-libmpfr-%-mingw32-dll-4.tar" />
-        </release>
-        <release tarname="mpfr-2.4.1-1-mingw32-dev.tar.lzma">
-          <requires eq="mingw32-libmpfr-%-mingw32-dll-1.tar" />
-        </release>
+        <release tarname="mpfr-3.1.5-2-mingw32-dev.tar.xz" />
+        <requires eq="mingw32-libmpfr-%-mingw32-dll-4.tar" />
         <requires eq="gmp-*-mingw32-dev.tar" />
       </component>
 
       <component class="doc">
         <release tarname="mpfr-3.1.5-2-mingw32-doc.tar.xz" />
-        <release tarname="mpfr-3.1.5-1-mingw32-doc.tar.xz" />
-        <release tarname="mpfr-3.1.2-2-mingw32-doc.tar.lzma" />
-        <release tarname="mpfr-2.4.1-1-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="info">
         <release tarname="mpfr-3.1.5-2-mingw32-info.tar.xz" />
-        <release tarname="mpfr-3.1.5-1-mingw32-info.tar.xz" />
       </component>
 
       <component class="lic">
         <release tarname="mpfr-3.1.5-2-mingw32-lic.tar.xz" />
-        <release tarname="mpfr-3.1.5-1-mingw32-lic.tar.xz" />
-        <release tarname="mpfr-3.1.2-2-mingw32-lic.tar.lzma" />
-        <release tarname="mpfr-2.4.1-1-mingw32-lic.tar.lzma" />
       </component>
     </package>
 
@@ -94,11 +77,6 @@
 
       <component class="dll">
         <release tarname="libmpfr-3.1.5-2-mingw32-dll-4.tar.xz" />
-        <release tarname="libmpfr-3.1.5-1-mingw32-dll-4.tar.xz" />
-        <release tarname="libmpfr-3.1.2-2-mingw32-dll-4.tar" >
-          <download tarname="mpfr-3.1.2-2-mingw32-dll.tar.lzma" />
-        </release>
-        <release tarname="libmpfr-2.4.1-1-mingw32-dll-1.tar.lzma" />
         <requires eq="mingw32-libgmp-*-mingw32-dll-10.tar" />
       </component>
     </package>
